#2017 Issue with full screen popup on mobile device.

--- a/template/css/media-phone.css
+++ b/template/css/media-phone.css
@@ -56,12 +56,6 @@ html.bx-media-phone {
 
 /* common.css */
 
-/* make popup fullscreen */
-.bx-media-phone body.bx-popup-visible {
-    height: 100vh;
-    overflow: hidden;
-}
-
 .bx-media-phone .bx-popup-responsive.bx-popup-trans-wrapper:not(.bx-popup-image-wrapper),
 .bx-media-phone .bx-popup-responsive:not(.bx-popup-image-wrapper) .bx-popup-trans,
 .bx-media-phone .bx-popup-responsive:not(.bx-popup-image-wrapper):not(.bx-popup-chain).bx-popup-applied,
